--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
+  box-sizing: border-box !important;
 }
 
 body {
@@ -53,9 +54,9 @@ body {
   left: -290px;
   height: 98vh;
   top: 0;
-  width: 250px;
+  width: 235px;
   margin: 5px 0 5px 5px;
-  border: 2px solid rgba(23, 21, 21, 0.9);
+  border: 1px solid #d2d6da !important;
   border-radius: 10px;
   background-color: #ffffff;
   /* box-shadow: 0 0 6px rgba(11, 11, 11, 0.5); */
@@ -72,7 +73,7 @@ body {
 
 .sidebar_menu .logo a {
   position: absolute;
-  left: 40px;
+  left: 27px;
   /* color: black; */
   text-decoration: none;
   font-size: 20px;
@@ -80,12 +81,10 @@ body {
 }
 
 .sidebar_menu .btn_two i{
-  color: gray;
   font-size: 20px;
   line-height: 60px;
   position: absolute;
-  left: 215px;
-  /* opacity: 0; */
+  left: 188px;
   cursor: pointer;
   transition: all 0.3s linear;
 }
@@ -96,9 +95,15 @@ body {
   top: 70px;
 }
 
+.menu ul {
+  list-style: none;
+}
+
 .sidebar_menu .menu li {
-  margin-top: 4px;
-  padding: 10px 20px;
+  margin: 10px;
+  padding: 10px 28px;
+  left: 2px;
+  border-radius: 10px;
 }
 
 .sidebar_menu .menu li i,a {
@@ -113,7 +118,7 @@ body {
 
 .sidebar_menu .social_media {
   position: absolute;
-  left: 20%;
+  left: 27%;
   bottom: 40px;
 }
 
@@ -127,15 +132,15 @@ body {
   display: none;
 }
 
-.sidebar_menu .menu li:hover {
+/* .sidebar_menu .menu li:hover {
   background-color:#f5f5f5;
   cursor: pointer;
-  /* border:solid #f5f5f5; */
   border-radius: #f5f5f5;
-}
+} */
 
-.sidebar_menu .btn_two i:hover {
-  font-size: 30px;
+.menu .active, .MyDiv .side-btn a li:hover {
+  background-color: #666;
+  color: white;
 }
 
 .btn_one i:hover {
@@ -149,7 +154,7 @@ body {
 
 #check:checked ~ .sidebar_menu {
   left: 0;
-  margin: 5px 0 5px 5px;
+  margin: 5px 0 5px 7px;
   border: 2px solid rgba(23, 21, 21, 0.9);
   border-radius: 10px;
 }
@@ -194,11 +199,13 @@ th, td {
   padding: 15px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+  text-align: center;
 }
 
 th {
   background: #f5f5f5;
   font-size: 14px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
@@ -243,3 +250,110 @@ tr:hover {
       padding: 10px;
   }
 }
+
+/* user management */
+.add-user {
+  text-align: right;
+  margin-right: 0.6em;
+}
+
+.add-btn {
+  color: #fff;
+  background-color: #494747;
+  padding: 10px 10px;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  border: none;
+  opacity: 0.8;
+  text-align: center;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+
+.add-btn:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+/* add user form */
+.user-form {
+  padding: 16px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 70%;
+  margin: 0 auto;
+}
+
+.user-form input[type=text], input[type=password], input[type=email], input[type=number] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: 1px solid #d2d6da;
+  border-radius: 20px;
+
+}
+
+.user-form input[type=text]:focus, input[type=password]:focus, input[type=email]:focus,input[type=number]:focus {
+  /* background-color: #ddd; */
+  outline: none;
+}
+
+.user-form h1 {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* dropdown */
+.dropbtn {
+  background-color: #42424a;
+  color: white;
+  padding: 5px;
+  width: 5rem;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 0 0 20px 20px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+  border-radius: 20px 20px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* .dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+} */
