--- a/src/MyComponents/Payment/RefundMgmt.css
+++ b/src/MyComponents/Payment/RefundMgmt.css
@@ -1,8 +1,8 @@
 /* Dashboard Container */
 .dashboard-container {
-    background: #f9f9f9;
+    /* background: #f9f9f9; */
     border-radius: .5rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 62px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
     margin-left: 10px;
     margin-right: 10px;
@@ -52,6 +52,7 @@
     width: 100%;
     border-collapse: collapse;
     background: white;
+    border-radius: 8px;
     margin: auto;
   }
   
