--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   text-decoration: none;
 }
 
-.btn_one i{
+.btn_one i {
   color: black;
   font-size: 30px;
   font-weight: 700;
@@ -74,7 +74,7 @@ body {
   font-weight: 500;
 }
 
-.sidebar_menu .btn_two i{
+.sidebar_menu .btn_two i {
   font-size: 20px;
   line-height: 60px;
   position: absolute;
@@ -100,7 +100,8 @@ body {
   border-radius: 10px;
 }
 
-.sidebar_menu .menu li i,a {
+.sidebar_menu .menu li i,
+a {
   text-decoration: none;
   font-size: 15px;
 }
@@ -125,8 +126,9 @@ body {
   display: none;
 }
 
-.menu .active, .MyDiv .side-btn a li:hover {
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(172,172,187,1) 100%, rgba(0,212,255,1) 100%);
+.menu .active,
+.MyDiv .side-btn a li:hover {
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(172, 172, 187, 1) 100%, rgba(0, 212, 255, 1) 100%);
   color: white;
 }
 
@@ -139,7 +141,7 @@ body {
   transform: scale(1.1);
 }
 
-#check:checked ~ .sidebar_menu {
+#check:checked~.sidebar_menu {
   left: 0;
   margin: 5px 0 5px 7px;
   border: 2px solid rgba(23, 21, 21, 0.9);
@@ -167,6 +169,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   padding-top: 10px;
+  padding-bottom: 40px;
   box-shadow: 0px 4px 62px rgba(0, 0, 0, 0.1) !important;
 }
 
@@ -175,15 +178,19 @@ table {
   border-collapse: collapse;
 }
 
-th, td {
-  padding: 10px;
-  text-align: left;
+th,
+td {
+  padding: 12px;
+  text-align: center;
+  border: 1px solid #bcbcbc;
   border-bottom: 1px solid #ddd;
   text-align: center;
+  font-size: 16px;
 }
 
 th {
-  background: #f5f5f5;
+  background: #4a4a4a;
+  color: white;
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
@@ -225,9 +232,11 @@ tr:hover {
 }
 
 @media screen and (max-width: 768px) {
-  th, td {
-      font-size: 12px;
-      padding: 10px;
+
+  th,
+  td {
+    font-size: 12px;
+    padding: 10px;
   }
 }
 
@@ -238,22 +247,21 @@ tr:hover {
 }
 
 .add-btn {
-  color: #fff;
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(172,172,187,1) 100%, rgba(0,212,255,1) 100%);
-  padding: 10px 10px;
-  border-radius: 20px;
-  font-size: 1.2rem;
-  border: none;
-  opacity: 0.8;
-  text-align: center;
-  margin-bottom: 10px;
   width: 100%;
+  margin-bottom: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+  border: none;
+  background-color: #4a4a4a;
+  color: white;
+  border-radius: 5px;
+  transition: background 0.3s ease-in-out;
 }
 
 
 .add-btn:hover {
-  opacity: 1;
-  cursor: pointer;
+  background-color: #8e8e8e; /* Darker gray */
+    color: white;
 }
 
 /* add user form */
@@ -266,17 +274,22 @@ tr:hover {
   margin: 0 auto;
 }
 
-.user-form input[type=text], input[type=password], input[type=email], input[type=number] {
+.user-form input[type=text],
+input[type=password],
+input[type=email],
+input[type=number] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: 1px solid #d2d6da;
-  border-radius: 20px;
-
+  border-radius: 10px;
 }
 
-.user-form input[type=text]:focus, input[type=password]:focus, input[type=email]:focus,input[type=number]:focus {
+.user-form input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus,
+input[type=number]:focus {
   /* background-color: #ddd; */
   outline: none;
 }
@@ -293,7 +306,8 @@ hr {
 
 /* dropdown */
 .dropbtn {
-  background: linear-gradient(90deg, rgba(2,0,20,0.4221455718037749) 0%, rgba(68,191,45,0.7953649450231481) 0%, rgba(21,218,155,1) 74%, rgba(98,198,123,0.6728578225160257) 100%);  color: white;
+  background: linear-gradient(90deg, rgba(2, 0, 20, 0.4221455718037749) 0%, rgba(68, 191, 45, 0.7953649450231481) 0%, rgba(21, 218, 155, 1) 74%, rgba(98, 198, 123, 0.6728578225160257) 100%);
+  color: white;
   padding: 5px;
   width: 5rem;
   font-size: 16px;
@@ -312,7 +326,7 @@ hr {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   border-radius: 0 0 20px 20px;
 }
@@ -332,4 +346,3 @@ hr {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
